# poc2

./: Cargo.toml  README.md
asset/def/axis/: CanBuyIngot.ron  CanBuyOre.ron  CanBuyTools.ron  CanSellIngot.ron  CanSellOre.ron  CanSellTools.ron  DistanceFromMe.ron  IngotEmpty.ron  IngotFull.ron  IngotPriceBuy.ron  IngotPriceSell.ron  OreEmpty.ron  OreFull.ron  OrePriceBuy.ron  OrePriceSell.ron  ToolsEmpty.ron  ToolsFull.ron  ToolsPriceBuy.ron  ToolsPriceSell.ron
asset/def/extractable/: Amethyst_Vein.ron
asset/def/item/: Amethyst.ron  Ingot.ron  Ore.ron  Tools.ron
asset/def/workplace/: Furnace.ron  Market.ron  Mine.ron  Smithy.ron
asset/texture/: character_sprites.ron  tile_sprites.ron
asset/ui/: inventory.ron  item_info.ron
config/: display.ron  input.ron
src/: ai.rs  asset.rs  component.rs  main.rs  map.rs  misc.rs  state.rs  system.rs  ui.rs
