[package]
name = "poc2"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/MegasKomnenos/amethyst", features = ["tiles", "vulkan"], rev = "c1d7b767a02a5a3ae2e01106946046c5d94ebf00" }
serde = { version = "1.0.104", features = ["derive"] }
ron = "0.5.1"
rayon = "1.3.0"
rand = "0.7.2"
voronoi = "0.1.4"
pathfinding = "2"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.10"
noise = "0.6.0"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
